--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "latest",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -33,6 +34,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -43,13 +45,12 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
-    "immer": "latest",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.454.0",
     "motion": "^10.16.4",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
-    "nuqs": "^1.16.0",
+    "nuqs": "latest",
     "react": "^19",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19",
@@ -60,19 +61,19 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "latest",
-    "use-sync-external-store": "latest",
-    "uuid": "latest",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
-    "zod": "^3.25.76",
-    "zustand": "latest"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.0",
+    "@tailwindcss/postcss": "latest",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.5",
+    "postcss": "^8.4.38",
+    "prisma": "latest",
     "tailwindcss": "^4.1.9",
     "typescript": "^5"
   }
