--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-table": "^8.11.3",
     "@vercel/analytics": "latest",
+    "ai": "^3.2.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -52,10 +53,10 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.454.0",
-    "motion": "^10.16.4",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "nuqs": "latest",
+    "openai": "^4.52.3",
     "react": "^19",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19",
