--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-table": "^8.11.3",
     "@vercel/analytics": "latest",
+    "@anthropic-ai/sdk": "^0.22.0",
     "ai": "^3.2.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
