--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@google/generative-ai": "^0.14.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "latest",
     "@radix-ui/react-accordion": "^1.2.12",
