--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.51.1",
     "@tanstack/react-table": "^8.11.3",
     "@vercel/analytics": "latest",
     "ai": "^3.2.18",
