--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A modern task management app with calendar features",
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev | pnpm pino-pretty",
     "lint": "next lint",
     "start": "next start",
     "db:seed": "prisma db seed"
@@ -60,6 +60,7 @@
     "next-themes": "^0.4.6",
     "nuqs": "latest",
     "openai": "^4.52.3",
+    "pino": "^9.2.0",
     "react": "^19",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19",
@@ -81,6 +82,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.16",
+    "pino-pretty": "^11.2.1",
     "postcss": "^8.4.38",
     "prisma": "latest",
     "tailwindcss": "^4.1.9",
