--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "latest",
-    "uuid": "^13.0.0",
+    "uuid": "^10.0.0",
     "vaul": "^1.1.2",
     "zod": "^3.23.8",
     "zustand": "^5.0.8"
@@ -81,6 +81,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.16",
     "pino-pretty": "^11.2.1",
     "postcss": "^8.4.38",
